presedent name fix and docs in collaps fix

--- a/src/components/PhotoComponent/index.scss
+++ b/src/components/PhotoComponent/index.scss
@@ -28,6 +28,7 @@
     color: #fff;
   }
   &__subtitle {
+    padding-bottom: 20px;
     font-weight: normal;
     font-size: 16px;
     line-height: 20px;
